Add weather API agent

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ sounddevice = "^0.4.6"
 obsws-python = "^1.6.2"
 pytchat = "^0.5.5"
 langchain-openai = "^0.0.2.post1"
+langchainhub = "^0.1.14"
 
 [build-system]
 requires = ["poetry-core"]
