--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 langchain = "^0.1.0"
 openai = "^1.7.2"
 langchain-google-genai = "^0.0.6"
@@ -19,6 +19,7 @@ obsws-python = "^1.6.2"
 pytchat = "^0.5.5"
 langchain-openai = "^0.0.2.post1"
 langchainhub = "^0.1.14"
+beautifulsoup4 = "^4.12.3"
 
 [build-system]
 requires = ["poetry-core"]
