--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ langchain-openai = "^0.0.2.post1"
 langchainhub = "^0.1.14"
 beautifulsoup4 = "^4.12.3"
 grandalf = "^0.8"
+chromadb = "^0.4.22"
 
 [build-system]
 requires = ["poetry-core"]
