--- a/dockerfiles/obs/resources/config/obs-studio/global.ini
+++ b/dockerfiles/obs/resources/config/obs-studio/global.ini
@@ -26,7 +26,7 @@ DocksLocked=false
 
 [OBSWebSocket]
 FirstLoad=false
-ServerEnabled=false
+ServerEnabled=true
 ServerPort=4455
 AlertsEnabled=false
 AuthRequired=true
