--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ langchainhub = "^0.1.14"
 beautifulsoup4 = "^4.12.3"
 grandalf = "^0.8"
 chromadb = "^0.4.22"
+flask = "^3.0.2"
 
 [build-system]
 requires = ["poetry-core"]
