Add celery with bugs...

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ beautifulsoup4 = "^4.12.3"
 grandalf = "^0.8"
 chromadb = "^0.4.22"
 flask = "^3.0.2"
+celery = "^5.3.6"
+flower = "^2.0.1"
+redis = "^5.0.2"
 
 [build-system]
 requires = ["poetry-core"]
