--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ flask = "^3.0.2"
 celery = "^5.3.6"
 flower = "^2.0.1"
 redis = "^5.0.2"
+apscheduler = "^3.10.4"
 
 [build-system]
 requires = ["poetry-core"]
