Add OBS settings

--- a/dockerfiles/config/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/dockerfiles/config/obs-studio/basic/profiles/Untitled/basic.ini
@@ -2,12 +2,13 @@
 Name=Untitled
 
 [Video]
-BaseCX=1024
-BaseCY=768
-OutputCX=960
-OutputCY=720
+BaseCX=720
+BaseCY=1280
+OutputCX=720
+OutputCY=1280
 FPSType=0
 FPSCommon=60
+ScaleType=bicubic
 
 [Panels]
 CookieId=FFE92846F92046C3
@@ -19,3 +20,21 @@ RecQuality=Stream
 
 [Output]
 Mode=Simple
+
+[AdvOut]
+RescaleRes=1024x768
+TrackIndex=1
+RecType=Standard
+RecRescaleRes=1024x768
+RecSplitFileType=Time
+RecTracks=1
+FLVTrack=1
+FFOutputToFile=true
+FFFormat=
+FFFormatMimeType=
+FFRescaleRes=1024x768
+FFVEncoderId=0
+FFVEncoder=
+FFAEncoderId=0
+FFAEncoder=
+FFAudioMixes=1
