--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,12 @@ services:
     environment:
       - YT_LIVE_KEY=5cq7-dwud-6fb8-vrs6-8hpk
     volumes:
-      - ./:/workspaces/ai-tuber
+      # - ./:/workspaces/ai-tuber
       - C:\Users\koduki\.secret\:/secret
-    ports:
-      - "5000:5000"
-    stdin_open: true
-    tty: true
-    restart: always
-  obs:
-    image: gcr.io/ren-studio-ai/ai-tuber
-    environment:
-      - YT_LIVE_KEY=5cq7-dwud-6fb8-vrs6-8hpk
     ports:
       - "6080:6080"
       - "5901:5901"
+      - "5000:5000"
     stdin_open: true
     tty: true
     restart: always
