--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ apscheduler = "^3.10.4"
 google-api-python-client = "^2.127.0"
 google-auth-oauthlib = "^1.2.0"
 google-auth = "^2.29.0"
+yfinance = "^0.2.40"
 
 [build-system]
 requires = ["poetry-core"]
