--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,17 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-langchain = "^0.1.11"
+langchain = "^0.2"
+langchain-openai = "^0.1.16"
+langchain-google-genai = "^1.0.7"
+langchainhub = "^0.1.14"
+langchain-experimental = "^0.0.62"
 openai = "^1.7.2"
-langchain-google-genai = "^0.0.6"
+ollama = "^0.2.1"
 soundfile = "^0.12.1"
 sounddevice = "^0.4.6"
 obsws-python = "^1.6.2"
 pytchat = "^0.5.5"
-langchain-openai = "^0.0.2.post1"
-langchainhub = "^0.1.14"
 beautifulsoup4 = "^4.12.3"
 grandalf = "^0.8"
 flask = "^3.0.2"
