bugfix for devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
 	"name": "AI Tuber Dev Container",
-	"dockerComposeFile": [
-		"../docker-compose.yml",
-		"docker-compose.yml"
-	],
+	"dockerComposeFile": "../docker-compose.yml",
 	"service": "saint-graph",
 	"workspaceFolder": "/workspaces/ai-tuber",
 	"customizations": {
