--- a/src/body/cli_tool/Dockerfile
+++ b/src/body/cli_tool/Dockerfile
@@ -10,4 +10,4 @@ RUN pip install fastapi uvicorn sse-starlette
 # Copy source code (optional)
 # COPY . .
 
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
