--- a/src/saint_graph/Dockerfile
+++ b/src/saint_graph/Dockerfile
@@ -5,9 +5,8 @@ WORKDIR /app
 # Install dependencies
 # google-genai: Gemini API
 # httpx: Async HTTP client
-# sseclient-py: For consuming Server-Sent Events from MCP
 # google-adk: Agent Development Kit
-RUN pip install google-genai httpx sseclient-py google-adk
+RUN pip install google-genai httpx google-adk
 
 # Copy source code (optional, since we mount volumes in dev)
 # COPY . .
