--- a/src/body/cli/Dockerfile
+++ b/src/body/cli/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:3.11-slim
 
-WORKDIR /app
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /workspaces/ai-tuber/src/body/cli
 
 # Install dependencies
-# fastapi, uvicorn: For the HTTP server
-# sse-starlette: For Server-Sent Events support
-RUN pip install fastapi uvicorn sse-starlette
+COPY src/body/cli/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy source code (optional)
 # COPY . .
