Dev/ren2 test001 (#20)
- 依存関係管理をモジュール化し、サービスごとに requirements.txt を導入
- 開発コンテナ環境を強化し、dev サービスと docker-compose.devcontainer.yml を追加
- pytest によるユニット・統合・E2E を含むテストフレームワークを導入
- LLM 対話ロジックを改善し、関数呼び出しの重複防止とチャット履歴管理を最適化
- mcp-cli（FastAPI）を合理化し、IOAdapter による抽象化とヘルスチェックを追加
- VTuber ペルソナ定義を簡素化し、LLM 指示への準拠性を向上

--- a/src/body/cli/Dockerfile
+++ b/src/body/cli/Dockerfile
@@ -1,13 +1,14 @@
 FROM python:3.11-slim
 
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 # Install dependencies
-# fastapi, uvicorn: For the HTTP server
-# sse-starlette: For Server-Sent Events support
-RUN pip install fastapi uvicorn sse-starlette
+COPY src/body/cli/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy source code (optional)
-# COPY . .
+# Copy only the CLI code
+COPY src/body/cli/ .
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--no-access-log"]
