--- a/src/saint_graph/Dockerfile
+++ b/src/saint_graph/Dockerfile
@@ -1,15 +1,10 @@
 FROM python:3.11-slim
 
 WORKDIR /app
+COPY src/saint_graph/requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Install dependencies
-# google-genai: Gemini API
-# httpx: Async HTTP client
-# google-adk: Agent Development Kit
-RUN pip install google-genai httpx google-adk
+COPY . /app/
+ENV PYTHONPATH=/app
 
-# Copy source code (optional, since we mount volumes in dev)
-# COPY . .
-
-# Run as a module to handle relative imports correctly
 CMD ["python", "-m", "src.saint_graph.main"]
