--- a/src/body/cli/Dockerfile
+++ b/src/body/cli/Dockerfile
@@ -5,10 +5,12 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 
 # Install dependencies
-COPY src/body/cli/requirements.txt .
+COPY src/body/cli/requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy only the CLI code
-COPY src/body/cli/ .
+# Copy source code preserving structure
+COPY src /app/src
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--no-access-log"]
+ENV PYTHONPATH=/app
+
+CMD ["uvicorn", "src.body.cli.main:app", "--host", "0.0.0.0", "--port", "8000", "--no-access-log"]
