--- a/src/body/cli/Dockerfile
+++ b/src/body/cli/Dockerfile
@@ -11,6 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy source code preserving structure
 COPY src /app/src
 
+ENV PYTHONIOENCODING=utf-8
+ENV LANG=C.UTF-8
 ENV PYTHONPATH=/app
 
 CMD ["uvicorn", "src.body.cli.main:app", "--host", "0.0.0.0", "--port", "8000", "--no-access-log"]
