change MCP design

--- a/src/body/cli/Dockerfile
+++ b/src/body/cli/Dockerfile
@@ -15,4 +15,4 @@ ENV PYTHONIOENCODING=utf-8
 ENV LANG=C.UTF-8
 ENV PYTHONPATH=/app
 
-CMD ["uvicorn", "src.body.cli.main:app", "--host", "0.0.0.0", "--port", "8000", "--no-access-log"]
+CMD ["python", "-m", "src.body.cli.main"]
