--- a/src/body/weather/Dockerfile
+++ b/src/body/weather/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 ENV PYTHONIOENCODING=utf-8
 ENV LANG=C.UTF-8
+ENV PYTHONUNBUFFERED=1
 
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
