--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,6 @@ markers =
     unit: ユニットテスト
     integration: 統合テスト
     e2e: E2Eテスト
+filterwarnings =
+    ignore::DeprecationWarning:google.adk.*:
+    ignore::UserWarning:google.adk.*:
