--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # AI Tuber Configuration
 GOOGLE_API_KEY=your_gemini_api_key_here
-RUN_MODE=cli
+
+# YouTube Live API (Optional - for comment fetching)
+YOUTUBE_API_KEY=your_youtube_api_key_here
+YOUTUBE_LIVE_CHAT_ID=your_live_chat_id_here
+
+# OBS WebSocket (Optional - for secure connection)
+OBS_PASSWORD=
