--- a/src/body/obs/supervisord.conf
+++ b/src/body/obs/supervisord.conf
@@ -38,7 +38,7 @@ stdout_logfile=/var/log/supervisor/novnc.log
 stderr_logfile=/var/log/supervisor/novnc_err.log
 
 [program:obs]
-command=/usr/bin/obs --startstreaming --minimize-to-tray
+command=/usr/local/bin/start_obs.sh
 autostart=true
 autorestart=true
 priority=50
