--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,6 @@ services:
       - "4455:4455"  # OBS WebSocket
     volumes:
       - audio_share:/tmp/audio
-      - ./data/obs_assets:/app/assets:ro
+      - ./data/mind/ren/assets:/app/assets:ro
     environment:
       - DISPLAY=:99
