--- a/src/body/streamer/Dockerfile
+++ b/src/body/streamer/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install dependencies
-COPY src/body/desktop/requirements.txt /app/requirements.txt
+COPY src/body/streamer/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy source code
@@ -16,4 +16,4 @@ COPY src/ /app/src/
 EXPOSE 8000
 
 # Run the MCP server
-CMD ["python", "-m", "src.body.desktop.main"]
+CMD ["python", "-m", "src.body.streamer.main"]
