--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 volumes:
   audio_share:
+  recordings:
 
 services:
-  # --- Body CLI (MCP Server) ---
+  # --- Body CLI (REST Server / For Development) ---
   body-cli:
     build:
       context: .
@@ -26,7 +27,7 @@ services:
       dockerfile: src/saint_graph/Dockerfile
     environment:
       - RUN_MODE=desktop
-      - MCP_URL=http://body-streamer:8000/sse
+      - BODY_URL=http://body-streamer:8000
       - WEATHER_MCP_URL=http://tools-weather:8001/sse
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - PYTHONPATH=/app
@@ -37,8 +38,9 @@ services:
         condition: service_healthy
       tools-weather:
         condition: service_healthy
-    # volumes:
-    #   - ./data/news:/app/data/news
+    volumes:
+      - ./data/news:/app/data/news
+      - ./data/mind:/app/data/mind
     command: python -m src.saint_graph.main
 
   # --- Tools Weather (MCP Server) ---
@@ -56,7 +58,7 @@ services:
       timeout: 2s
       retries: 5
 
-  # --- Body Streamer (MCP Server for Streaming) ---
+  # --- Body Streamer (REST Server for Streaming) ---
   body-streamer:
     build:
       context: .
@@ -86,7 +88,7 @@ services:
       timeout: 2s
       retries: 5
 
-  # --- VoiceVox Engine (MCP Server) ---
+  # --- VoiceVox Engine ---
   voicevox:
     image: voicevox/voicevox_engine:nvidia-ubuntu20.04-latest
     ports:
@@ -114,5 +116,7 @@ services:
       - "4455:4455"  # OBS WebSocket
     volumes:
       - audio_share:/app/shared/audio
+      - recordings:/tmp # OBS recording output path
+      - ./data/mind:/app/data/mind # Mount local mind assets to container
     environment:
       - DISPLAY=:99
